--- a/gomoku/gomoku.html
+++ b/gomoku/gomoku.html
@@ -1,4 +1,5 @@
 <iframe id="inlineFrameExample"
     title="Inline Frame Example"
+	frameborder="no" border="0"marginwidth="0" marginheight="0" scrolling="no"allowtransparency="yes"
     src="https://determined-jennings-4da62f.netlify.com/gomoku/introduction.html">
 </iframe>
