--- a/gomoku/index.html
+++ b/gomoku/index.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+	<script type="text/javascript" src="iframe.css"></script>
     <script src="script.js"></script>
     <title>Remote Gomoku!</title>
 </head>
 <body>
     <div id="board" style="display: inline;float: left;"></div>
-    <div id="rules">
-	<iframe id="inlineFrameExample"
-    title="Inline Frame Example"
-	frameborder="no" border="0"marginwidth="0" marginheight="0" scrolling="no"allowtransparency="yes"
-    src="https://determined-jennings-4da62f.netlify.com/gomoku/introduction.html">
+    <div id="iframe-container">
+	<iframe id="inlineFrameExample" width="50%" title="Inline Frame Example" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no" allowtransparency="yes" src="/introduction.html">
 	</iframe>
 	</div>
     <div id="reset" style="padding-left: 50% "></div>
