--- a/gomoku/introduction.html
+++ b/gomoku/introduction.html
@@ -1,4 +1,4 @@
-<div id="rules" style="padding-left: 50% ">
+<div id="rules">
 Rules:Two player game, one took black, one took white.Black and white each take turns to play.
 Try to let five of your chess connect in a line with each other.If five chess connects in a line horizontally, vertically, and diagonally, you win. 
 <a href="https://heatmint.github.io/gomoku_intro.html">Click me for more info and guides about this website.</a>
