--- a/gomoku/index.html
+++ b/gomoku/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="board" style="display: inline;float: left;"></div>
     <div id="iframe-container">
-	<iframe id="inlineFrameExample" width="50%" title="Inline Frame Example" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no" allowtransparency="yes" src="/introduction.html">
+	<iframe id="inlineFrameExample" width="50%" title="Inline Frame Example" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no" allowtransparency="yes" src="introduction.html">
 	</iframe>
 	</div>
     <div id="reset" style="padding-left: 50% "></div>
